2002-11-26  Jens Finke  <jens@triq.net>

	* src/apotheke-directory.c (apotheke_directory_construct): Setup
	sort function.
	(apotheke_sort_func): Reworked.

	* src/apotheke-view.c (setup_tree_view): Fixed column sorting ids.

2002-11-26  Jens Finke  <jens@triq.net>

	* src/apotheke-file.h: Removed.
	
	* src/Makefile.am (SOURCES): Removed apotheke-file.h

	* src/apotheke-cvs-entries.[ch] (apotheke_cvs_entries_get_entries):
	Return list of all CVS entries.

	* src/apotheke-directory.[ch]: Use the tree model directly to
	store all file information. Don't use ApothekeFile anymore.

	* src/apotheke-view.c: View columns are independent of model
	columns now. Obtain a filename of an entry through the tree model,
	don't use ApothekeFile.

2002-11-14  Ross Burton  <ross@burtonini.com>

	* src/Makefile.am: Install the binary in ${libexecdir}, instead of
	${bindir}; and replace the path in the .server file. Also add some
	more clean rules.

	* configure.in: Fix the typo with GNOME_COMPILE_WARNINGS, so that
	it actually works. Use the GConf macros instead of doing it all by
	hand. Also turn on AM_MAINTAINER_MODE.

2002-11-07  Jens Finke <jens@triq.net>

	* apotheke.spec.in: Added spec file, created by Christian Schaller
	<Christian@linuxpower.org>.

	* configure.in: Added apotheke.spec to output files.

	* Makefile.am: Added spec file to EXTRA_DIST.

2002-11-01  Jens Finke <jens@triq.net>

	Finished commit and update dialogs. Some minor polishing and
	packaging stuff.

	Removed the 'intelligent' glutter position algorithm.

	* configure.in: Bumped version to 0.2.

2002-10-25  Jens Finek <jens@triq.net>

	Based on a patch by Andy Piper <andy.piper@freeuk.com>.
	
	* src/apotheke-view.c: Read and write bool for hide_ignored key.
	String fixes.

	* apotheke.schemas: Type fixes. 

2002-06-16  Jens Finke <jens@triq.net>

	* apotheke.schemas: Added apps/apotheke/diff/operation key.

	* src/apotheke-client-cvs.c (assemble_diff_cmd): Consider diff operation.
