@@ -23,6 +23,7 @@ enum {
 	AD_COL_ATTRIBUTES,
 	AD_COL_TAG,
 	AD_COL_DATE,
+	AD_COL_MTIME,
 	AD_NUM_COLUMNS
 };
 
